--- a/02_Calculator/calculator.html
+++ b/02_Calculator/calculator.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="calculator.css">
 </head>
-<body>
-    
-    <div class="container">
-        <h1>Welcome To My Calculator</h1>
-    </div>
 
+<body>
+
+    <div class="container">
+
+        <h2>Welcome To My Calculator</h2>
+
+        <div class="calculator">
+            <input type="text" placeholder="00" id="display">
+            <div class="buttons">
+                <button class="oparator AC">AC</button>
+                <button class="oparator DEL">DEL</button>
+                <button class="oparator">%</button>
+                <button class="oparator">/</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button class="oparator">*</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button class="oparator">-</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="oparator">+</button>
+                <button>0</button>
+                <button>.</button>
+                <button class="oparator">=</button>
+            </div>
+        </div>
+
+    </div>
 
     <script src="calculator.js"></script>
 </body>
+
 </html>
