--- a/06_random_quote_generator/index.html
+++ b/06_random_quote_generator/index.html
@@ -15,12 +15,12 @@
         <h1>Quote of the Day</h1>
         <div class="content">
             <span><i class="ri-double-quotes-l"></i></span>
-            <span id="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates omnis suscipit iure.</span>
+            <span id="quote">Find your best Quote of the Day. Have a good day.............</span>
             <span><i class="ri-double-quotes-r"></i></span>
         </div>
         <h4 class="author">
             <span>--</span>
-            <span id="name">A.P.J. Kalam</span>
+            <span id="name">@mr. hello</span>
         </h4>
         <div class="buttons">
             <ul>
